Set up auto deployment of documentation

--- a/.github/actions/setup-python-env/action.yml
+++ b/.github/actions/setup-python-env/action.yml
@@ -10,6 +10,10 @@ inputs:
     description: "uv version to use"
     required: true
     default: "0.6.14"
+  groups:
+    description: "Dependency groups to install (space-separated)"
+    required: false
+    default: ""
 
 runs:
   using: "composite"
@@ -26,5 +30,10 @@ runs:
         cache-suffix: ${{ matrix.python-version }}
 
     - name: Install Python dependencies
-      run: uv sync --frozen
+      run: |
+        if [ -n "${{ inputs.groups }}" ]; then
+          uv sync --frozen --group ${{ inputs.groups }}
+        else
+          uv sync --frozen
+        fi
       shell: bash
