--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ Documentation = "https://alexhyunminlee.github.io/PYEDGIE/"
 [dependency-groups]
 dev = [
     "pytest>=7.2.0",
+    "pytest-cov>=4.0.0",
     "pre-commit>=2.20.0",
     "tox-uv>=1.11.3",
     "deptry>=0.23.0",
