--- a/.github/actions/setup-python-env/action.yml
+++ b/.github/actions/setup-python-env/action.yml
@@ -34,6 +34,6 @@ runs:
         if [ -n "${{ inputs.groups }}" ]; then
           uv sync --frozen --group ${{ inputs.groups }}
         else
-          uv sync --frozen
+          uv sync --frozen --group dev --group docs
         fi
       shell: bash
