--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,7 @@ authors = [{ name = "Alex Lee", email = "lee3742@purdue.edu" }]
 readme = "README.md"
 keywords = ['python']
 requires-python = ">=3.9,<4.0"
-dependencies = [
-    "numpy>=1.24.0",
-]
+dependencies = []
 classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python",
