--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 keywords = ['python']
 requires-python = ">=3.9,<4.0"
 dependencies = [
+    "numpy>=1.21.0",
+    "pandas>=1.3.0",
 ]
 classifiers = [
     "Intended Audience :: Developers",
