--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ description = "PYEDGIE is a Python based distribution grid simulator"
 authors = [{ name = "Alex Lee", email = "lee3742@purdue.edu" }]
 readme = "README.md"
 keywords = ['python']
-requires-python = ">=3.9,<4.0"
+requires-python = ">=3.10,<4.0"
 dependencies = [
+    "ochre-nrel>=0.9.1",
 ]
 classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -63,7 +63,7 @@ ignore_missing_imports = true
 testpaths = ["tests"]
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 line-length = 120
 fix = true
 
