--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ keywords = ['python']
 requires-python = ">=3.10,<4.0"
 dependencies = [
     "ochre-nrel>=0.9.1",
+    "pandas>=2.0.0",
 ]
 classifiers = [
     "Intended Audience :: Developers",
