--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.10,<4.0"
 dependencies = [
     "ochre-nrel>=0.9.1",
     "pandas>=2.0.0",
+    "numpy>=1.24.0",
 ]
 classifiers = [
     "Intended Audience :: Developers",
