--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ Homepage = "https://alexhyunminlee.github.io/PYEDGIE/"
 Repository = "https://github.com/alexhyunminlee/PYEDGIE"
 Documentation = "https://alexhyunminlee.github.io/PYEDGIE/"
 
+[project.optional-dependencies]
+tests = [
+    "openpyxl>=3.1.5",
+]
+
 [dependency-groups]
 dev = [
     "pytest>=7.2.0",
